# groceries-selenium

./: data_processing.py  pyproject.toml  scraping.py  server.py
static/scripts/: chart-controller.js
static/styles/: main.css
templates/: index.html
