[tool.poetry]
name = "groceries-selenium"
version = "0.1.0"
description = ""
authors = ["sage-hyun <dan06052@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "3.141.0"
python-dotenv = "^0.19.2"
bs4 = "^0.0.1"
chromedriver-autoinstaller = "^0.3.1"
Flask = "^2.0.3"
pymongo = {extras = ["srv"], version = "^4.0.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
